# rocky

./: .gitignore  CMakeLists.txt  Makefile  README.md
nbproject/: configurations.xml  project.xml
src/: Module.cpp  Module.hpp  Node.cpp  Node.hpp  Operations.cpp  main.cpp  main.hpp  package.hpp  utils.cpp  utils.hpp
src/jack/: Client.cpp  Client.hpp
src/sio/: package.hpp  sio.cpp  sio.hpp
src/sio/jack/: Jack.cpp  Jack.hpp  package.hpp
src/ui/: AboutDialog.cpp  AboutDialog.hpp  MainWindow.cpp  MainWindow.hpp  ModuleWidget.cpp  ModuleWidget.hpp  ProcessingGraphWidget.cpp  ProcessingGraphWidget.hpp  PropertiesWidget.cpp  PropertiesWidget.hpp  package.hpp
